<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="sample.nuance.com.speechkitsample.AudioActivity">


    <LinearLayout
        android:id="@+id/repetitions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:text="@string/repetitions_label"
            style="@style/Label"/>

        <EditText
            android:id="@+id/repetitions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:text="@string/default_repetitions"
            android:inputType="number"
            android:gravity="center"/>

    </LinearLayout>



    <ScrollView
        android:id="@+id/logs_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/repetitions_container"
        android:layout_above="@+id/toggle_play"
        android:layout_marginTop="10dp"
        android:background="@drawable/logs_background">

        <TextView
            android:id="@+id/logs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="50dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@android:color/transparent"/>

        </ScrollView>


    <TextView
        android:id="@+id/logs_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/logs_container"
        android:layout_alignLeft="@+id/logs_container"
        android:layout_alignStart="@+id/logs_container"
        android:layout_margin="15dp"
        android:text="@string/logs_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#D1D1D1"/>

    <Button
        android:id="@+id/clear_logs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/logs_container"
        android:layout_alignRight="@+id/logs_container"
        android:layout_alignEnd="@+id/logs_container"
        android:layout_margin="5dp"
        android:text="@string/clear_logs_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#2E85FF"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/toggle_play"
        android:layout_above="@+id/footer"
        android:text="@string/enqueue"
        style="@style/ActionButton"/>

    <FrameLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <include layout="@layout/footer"/>
    </FrameLayout>


</RelativeLayout>
